# yoloObjectDetect

./: .gitignore  pyproject.toml
src/: dataset.py  pyproject.toml  tensor_structure.py  tflite.py  training.py
src/Foot-Landmark-Detection-1/: README.dataset.txt  README.roboflow.txt  data.yaml
src/Foot-Landmark-Detection-1/test/labels/: 3103f4e600cc37c514353610e5589add_jpg.rf.609f2c119bceb2474a6717d19dc84ee1.txt  42388347_NjIwLTYyMS04MmE5ZTBmZTk4_jpg.rf.967ad3742bddc41278f510817702f060.txt  71FC2Dp4dDL__AC_UY900__jpg.rf.67945175a08d4efe277503e662bbb970.txt  d37519fd-71a3-433f-9a59-89db9cf36bc1_webp.rf.4883d3fe82f7e3fef9258c08abfec9c2.txt  de91ea8e7676e0f4_jpg.rf.f06ab153434686f915756e399a5ba81d.txt  depositphotos_114490122-stock-photo-human-feet-in-sneaker-shoes_jpg.rf.00045a93979702c899a64caa2cfa091d.txt  e2285fe9f17413f6_jpg.rf.01892af9ef7b0170ce43ab969facc6b1.txt  free-photo-of-close-up-of-shoes_jpeg.rf.1dd4efaf521f2a1c5b03e4f890c072f2.txt  image102_jpeg.rf.9a1e879a7fee862a028a080fb56a0b3a.txt  image130_jpeg.rf.ff5e246c527a6d47ebca33b89a43b7e5.txt  (+3 more)
src/Foot-Landmark-Detection-1/train/: labels.cache
src/Foot-Landmark-Detection-1/valid/: labels.cache
src/Foot-Landmark-Detection-3/: README.dataset.txt  README.roboflow.txt  data.yaml
src/Foot-Landmark-Detection-3/train/: labels.cache
src/Foot-Landmark-Detection-3/valid/: labels.cache
src/Foot-Landmark-Detection-4/: README.dataset.txt  README.roboflow.txt  data.yaml
src/Foot-Landmark-Detection-4/train/: labels.cache
src/Foot-Landmark-Detection-4/valid/: labels.cache
(+621 files in other folders)
